# propertycollect

./: .gitignore  Cargo.toml  apollo-client.ts  codegen.yml  graphql.schema.json  next.config.js  package-lock.json  package.json  vercel.json
api/: Cargo.toml  serve.rs
backend/src/: main.rs
backend/src/server/schema/: mod.rs  nobroker.rs
backend/src/services/: nobroker.rs
graphql/: queries.graphql
output/: index.html
pages/: index.tsx  search.tsx
properties-collect/: graphql.schema.json  package.json  vercel.json
properties-collect/api/: Cargo.toml
properties-collect/graphql/: queries.graphql
properties-collect/pages/: _app.tsx  index.tsx  properties.tsx  search.tsx
properties-collect/src/: properties.tsx
src/: lib.rs  properties.tsx
src/services/: nobroker.rs
styles/: globals.css
