[package]
name = "index"
version = "2.0.0"
authors = ["Mike Engel <mike@mike-engel.com>"]
edition = "2018"


[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
warp = "0.3"
warp_lambda = { git = "https://github.com/deep-gaurav/warp_lambda.git", branch = "main" }
anyhow = "1"
propertycollect = { path = "../backend" }
async-graphql = "2.0"
async-graphql-warp = "2.0"


[dependencies.tokio]
version = "1"
# features = ["full"]

[[bin]]
name = "serve"
path = "./serve.rs"


[profile.release]
lto = true
